   Version 0.35

-----------------------------------------------------------------------
 Version 0.41
 ============

 Released on 

 New features and improvements:

   - Reconciliation: update buttons after actions are done (todo #883).
   - Reconciliation: display bat lines reconciliation date and identifier.
   - Reconciliation: review display on conciliation groups (todo #877).

 Bug fixes:

   - GuidedInput: review the layout of the UI (todo #882).
   - Reconciliation: fix missing leading space (todo #881).
   - Reconciliation: fix rounding computation (todo #876).
   - Reconciliation: fix account label style (todo #871).
   - ReconciliationSummary: reset drawing area when changing account (todo #872).

 Other changes:

   - my_utils_entry_get_valid(), my_utils_entry_set_valid(): removed functions.
   - my_utils_widget_remove_style(): new function.
   - ofo_currency_get_precision(): new method.
   - ofo_entry_unsettle_by_number(): new method.
   - ofaPage: is now derived from GtkGrid.
   - ofa_page_get_top_grid(): removed method.
   - ofa_render_page_clear_drawing_area(): new method.

-----------------------------------------------------------------------
 Version 0.40
 ============

 Released on 2015-11-05

 New features and improvements:

   - Display application version (todo #6).
   - AccountsChart: open Settlement and Reconciliation page (todo #813).
   - DossierManager: rows are sorted by ascending dossier name, descending exercice (todo #831).
   - ImportAssistant: recall the loaded file on top of the pages (todo #836).
   - Restore: close the current dossier if any (todo #807).
   - RestoreAssistant: remove a newly created dossier on cancel (todo #834).
   - RateProperties: let the user reorder the lines (todo #187).
   - Add user preferences to open dossier notes or properties at startup.
   - Set mnemonic widgets on all dialogs (todo #839).
   - Have a mnemonic widget even in frames with a single child (todo #857).