@@ -22,6 +22,8 @@
    - Reconciliation: update buttons after actions are done (todo #883).
    - Reconciliation: display bat lines reconciliation date and identifier.
    - Reconciliation: review display on conciliation groups (todo #877).
+   - ViewEntries: ask for a confirmation when deleting a settled
+                  or conciliated entry (todo #875).
 
  Bug fixes:
 
